--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "^2.16.1",
+    "react-native-reanimated": "^3.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -32,5 +35,11 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "packageManager": "pnpm@9.0.6",
+  "pnpm": {
+    "patchedDependencies": {
+      "react-native-reanimated@3.10.0": "patches/react-native-reanimated@3.10.0.patch"
+    }
   }
 }
